--- a/package.json
+++ b/package.json
@@ -6,16 +6,29 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "expo lint",
+    "lint:fix": "expo lint --fix",
+    "prettier:check": "prettier --check .",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
+    "@types/react-native": "^0.72.8",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "prettier": "^3.5.3",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.1",
+    "expo-linear-gradient": "~14.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0"
   },
   "private": true
 }
