Added tab based routing and all the other screens

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "scheme": "eczema-tracker",
     "name": "Eczema-Tracker",
     "slug": "Eczema-Tracker",
     "version": "1.0.0",
