--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eczema-tracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,12 +18,14 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "expo": "~53.0.9",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
     "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-safe-area-context": "^5.4.1",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
