--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@types/react-native": "^0.72.8",
     "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
     "expo": "~53.0.9",
@@ -28,8 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "react-native-svg": "^15.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
