Changed some stuff"

--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "scheme": "eczema-tracker",
-    "name": "Eczema-Tracker",
+    "scheme": "derma-log",
+    "name": "DermaLog",
     "slug": "Eczema-Tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/appstore.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/appstore.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -18,14 +18,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/playstore.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.emixak.DermaLog"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      "package": "com.emixak.DermaLog",
+      "buildName": "dermaLog.apk"
     },
     "extra": {
       "eas": {
