--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "eslint-plugin-prettier": "^5.4.1",
     "expo": "~53.0.9",
     "expo-linear-gradient": "~14.1.4",
+    "expo-navigation-bar": "~4.2.6",
     "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
     "prettier": "^3.5.3",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.0"
