--- a/package.json
+++ b/package.json
@@ -15,24 +15,24 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@types/react-native": "^0.72.8",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
-    "expo": "~53.0.9",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-navigation-bar": "~4.2.6",
-    "expo-router": "^5.0.7",
+    "expo": "53.0.12",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-modules-core": "~2.4.0",
+    "expo-router": "~5.1.0",
     "expo-status-bar": "~2.2.3",
     "prettier": "^3.5.3",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "15.11.2",
+    "expo-navigation-bar": "~4.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
